sugar/tests/success/par.mx

t : _|_ | _|_, j : 1, k : 1 |- connect t via
    { x -> let () = j in x
    ; y -> let () = k in y
    }
